@@ -22,6 +22,7 @@ where XXXXXX is the bug number as listed below.
 
 219156  [380] handle statically linked malloc and/or other malloc libs
 254088  [380] Valgrind should know about UD2 instruction
+275800  [380] s390x: Add support for the ecag instruction (part 1)
 284004  [381] == 301281
 289584  [381] Unhandled instruction: 0xF 0x29 0xE5 (MOVAPS)
 295808  [381] amd64->IR: 0xF3 0xF 0xBC 0xC0 (TZCNT)
